Fix username alignment styles

--- a/src/components/User/Username.css
+++ b/src/components/User/Username.css
@@ -1,5 +1,5 @@
 .Username {
-  display: inline-flex;
+  display: flex;
   align-items: center;
 }
 
